<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">


    <ImageView
        android:id="@+id/logo"
        android:layout_width="279dp"
        android:layout_height="262dp"
        android:layout_marginTop="64dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_students"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/students_by"
        android:textColor="#2B3451"
        android:textColorHint="#2B3451"
        android:textSize="@dimen/_22sdp"


        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <Button
        android:id="@+id/btn_sqlite"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/_30sdp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="@dimen/_30sdp"
        android:backgroundTint="#1FAD9F"

        android:padding="@dimen/_8sdp"
        android:text="@string/students_by_sqlite"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"

        android:textColor="@color/white"
        android:textSize="@dimen/_18sdp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_students" />

    <Button
        android:id="@+id/btn_firebase"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/_30sdp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="@dimen/_30sdp"
        android:layout_weight="1"
        android:backgroundTint="#1FAD9F"
        android:padding="@dimen/_8sdp"
        android:text="@string/students_by_firebase"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"

        android:textColor="@color/white"
        android:textSize="@dimen/_18sdp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_sqlite" />

    <Button
        android:id="@+id/btn_weather"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/_30sdp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="@dimen/_30sdp"
        android:layout_weight="1"
        android:backgroundTint="#1FAD9F"
        android:drawableStart="@drawable/ic_baseline_wb_cloudy_24"
        android:padding="@dimen/_8sdp"
        android:text="@string/weather"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/white"
        android:textSize="@dimen/_18sdp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_firebase" />
</androidx.constraintlayout.widget.ConstraintLayout>