<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:layout_marginTop="@dimen/_10sdp"
    android:backgroundTint="@color/white"
    android:elevation="9dp"

    android:id="@+id/layout"
    app:cardCornerRadius="8dp"
    app:cardElevation="9dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="5dp"
        >

        <TextView
            android:id="@+id/username_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="8dp"
            android:text="@string/name_demo"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sdp"

            app:layout_constraintStart_toEndOf="@+id/materialCardView3"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/id_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="8dp"
            android:text="ID"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp"

            app:layout_constraintStart_toEndOf="@+id/materialCardView3"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/materialCardView3"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_margin="8dp"
            android:elevation="9dp"
            app:cardCornerRadius="888dp"
            app:cardElevation="9dp"
            android:layout_marginBottom="@dimen/_10sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/user_image_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"

                android:scaleType="centerCrop"

                android:src="@drawable/logo"
                tools:srcCompat="@tools:sample/avatars" />

        </com.google.android.material.card.MaterialCardView>

        <Button
            android:id="@+id/btn_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/delete"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="@dimen/_12sdp"
            android:backgroundTint="@color/red"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />
        <Button
            android:id="@+id/btn_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/update"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold"
            android:backgroundTint="@color/colorPrimaryAccent"
            android:textColor="@color/white"
            app:layout_constraintEnd_toStartOf="@+id/btn_delete"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>